syntax = "proto3";

package auth;

option go_package = "github.com/danielhoward314/cloud-inventory/backend/protogen";

import "google/api/annotations.proto";
import "google/api/http.proto";

service AuthService {
  rpc ValidateSession (ValidateSessionRequest) returns (ValidateSessionResponse) {
    option (google.api.http) = {
      post: "/v1/session"
      body: "*"
    };
  }
  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/login"
      body: "*"
    };
  }
}

message ValidateSessionRequest {
    string jwt = 1;
}

message ValidateSessionResponse {
    string jwt = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string administrator_id = 1;
    string organization_id = 2;
    string administrator_name = 3;
    string organization_name = 4;
    string billing_plan = 5;
    string jwt = 6;
}
